For 1.18.1:
	- Linux browser plugin reverified; should now work quite well!

	- command line invocation of http:// files restored. (was broken in 1.17).


For 1.17.7:
	- javascript problem creating some nodes that had FreeWRLPTR defined fields fixed.

For 1.17.6;
	- now scans scientific notation floats correctly.

For 1.17:
	- new menubar operation, can be compiled without it. 

	- shape compiler thread, if supported by OS.

	- strncmp #ifdef deleted from code; made our function the default

	- SAI code changes (modifies EAI and interfaces in Browser.pm)

	- added EAI/SAI *ColorRGBA types

	- much work in making the Perl parser output use the SAI/EAI creation code;
	  this allows for code reduction, and for verification of EAI/SAI process.

For 1.16:
	- VisibilitySensor

	- bug in DirectionalLight rend fixed.

	- bug in script invocation - scripts are now initiated when routing entries
	  are made, not when first invoked.

	- H-Anim nodes being worked on.

	- Geometry2D nodes complete.

	- streamlining build and rendering process by reducing amount of C code in
	  VRMLRend.pm and VRMLC.pm

	- bug in IndexedFaceSet rendering fixed - degenerate triangle finding changed
	  so that all triangles are looked at in a face, and the one with the longest
	  vector length is the one chosen to represent the normal of that face.

	- re-arranged the CFuncs directory to better follow X3D Spec.

	- added nodes to the "topNodes" field - some warnings were printed for correct
	  scenegraphs pertaining to what nodes were allowed as root nodes.

	- reworked texture coordinates for Extrusion and ElevationGrid to handle Multi
	  Texture nodes (MultiTextureTransform, TextureCoordinateGenerator, etc...)

	- New nodes: 
		- TextureCoordinateGenerator node.
		- StaticGroup node.
		- TextureBackground node.
		- LoadSensor node. (has problems with Scripts)

	- EAI complete.



For 1.15:
	- Fixed dynamic linker bug with OSX 10.4.3
